--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve ./src/index.html --no-source-maps",
+    "start-https": "parcel serve ./src/index.html --no-source-maps --cert ./serverside/cert.crt --key ./serverside/key.key",
     "deploy": "parcel build ./src/index.html --public-url ./ --dist-dir ./docs --no-source-maps"
   },
   "keywords": [],
